--- a/feedback.html
+++ b/feedback.html
@@ -50,7 +50,7 @@
         <div id="feedback-heading">
             <h2>Hear From Each Other</h2>
         </div>
-        <h3 id="feed-sub" class="solid-peach">Feedback</h3>
+        <h3 class="solid-peach feed-sub">Feedback</h3>
         <div class="solid-peach feedback-section senses-info-left">
             <div class="feedback-grid">
                 <img src="assets/images/dad_1.jpg" alt="a dad's profile picture" class="profile-pictures">
@@ -92,7 +92,7 @@
     </section>
     <section>
         <!--Recommendations Section-->
-        <h3 id="feed-sub" class="solid-pink">Recommendations</h3>
+        <h3 class="solid-pink feed-sub">Recommendations</h3>
         <div class="solid-pink feedback-section senses-info-left">
             <div class="feedback-grid">
                 <img src="assets/images/mum_4.jpg" alt="a mum's profile picture" class="profile-pictures">
