--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
         <!--Navigation Menu-->
         <nav id="menu">
             <ul>
-                <!--Javascript and Dropdown from W3 school tutorial for sticky nav bar and dropdown menu - adjusted for this site
-                https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_navbar_sticky
+                <!--Dropdown from W3 school tutorial for dropdown menu - adjusted for this site
                 https://www.w3schools.com/css/tryit.asp?filename=trycss_dropdown_navbar-->
                 <li><a href="javascript:void(0)" class="active">Home</a></li>
                 <li class="dropdown"><a href="about.html" class="dropbtn">All About
@@ -62,9 +61,10 @@
                         be experiencing. Most of all they will have fun!</p>
                     <br>
                     <h3 class="text-area">What can I do as a parent?</h3>
+                    <div id="learn-more"><a href="about.html">Learn More</a></div>
                 </div>
             </div>
-            <div id="learn-more"><a href="about.html">Learn More</a></div>
+            
         </section>
         </div>
         <!--Footer-->
@@ -87,24 +87,5 @@
 
     <!-- Font awesome script-->
     <script src="https://kit.fontawesome.com/bd9c348b33.js" crossorigin="anonymous"></script>
-
-    <!--Javascript from W3 schools for sticky nav bar
-    https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_navbar_sticky-->
-    <script>
-        window.onscroll = function () {
-            myFunction()
-        }
-
-        var header = document.getElementById("header");
-        var sticky = header.offsetTop;
-
-        function myFunction() {
-            if (window.pageYOffset >= sticky) {
-                header.classList.add("sticky")
-            } else {
-                header.classList.remove("sticky");
-            }
-        }
-    </script>
 </body>
 </html>
