Add format changes to header footer and nav

--- a/about.html
+++ b/about.html
@@ -43,6 +43,7 @@
             </ul>
         </nav>
     </header>
+    <!--The div content section is added to allow for enough content padding when styling for the sticky header bar-->
     <div class="content">
         <section>
             <!--About Page top of page-->
@@ -172,106 +173,121 @@
             </div>
             <h3 class="sections-headers">Top 10 Activities</h3>
             <div id="top10-pane">
-                <img src="assets/images/play_dough.jpg" alt="a young boy holding play dough in his hands"
-                    class=" square-image" id="play-dough-img">
+                <div id=play-images>
+                    <img src="assets/images/play_dough.jpg" alt="a young boy holding play dough in his hands"
+                        class=" square-image play-image-internal">
 
-                <img src="assets/images/water_play.jpg" alt="a young boy holding up a hose pipe and spraying water"
-                    class=" square-image" id="water-img">
+                    <img src="assets/images/water_play.jpg" alt="a young boy holding up a hose pipe and spraying water"
+                        class=" square-image play-image-internal">
 
-                <img src="assets/images/mud_play.jpg" alt="multiple hands playing in a pile of mud and covered in mud"
-                    class="square-image" id="mud-img">
+                    <img src="assets/images/mud_play.jpg"
+                        alt="multiple hands playing in a pile of mud and covered in mud"
+                        class="square-image play-image-internal">
+                </div>
 
-                <div class="solid-blue activities-style">
-                    <p>
-                        <em>Activity One: Making and Painting Homemade Salt Dough</em>
-                        <br>
-                        Simply combine salt, flour and water to create beautiful Salt Dough sculptures. Then get those
-                        Cutters
-                        and Rollers out to perfect your shapes – and add Glitter for an extra sparkle! Finally, pop your
-                        creations in the oven and once they are hardened, let the little ones paint them.
-                    </p>
-                </div>
-                <div class="solid-pink activities-style">
-                    <p>
-                        <em>Activity Two: Play Dough</em>
-                        <br>
-                        Cutting, squishing, rolling, and kneading. Soft Dough is perfect for stimulating sense of touch
-                        –
-                        toddlers will enjoy hours of soft dough fun!
-                    </p>
-                </div>
-                <div class="solid-grey activities-style">
-                    <p>
-                        <em>Activity Three: Kinetic Sand</em>
-                        <br>
-                        Mould, squeeze and build. Kinetic Sand flows through the fingers just like real sand – it’s that
-                        squeezable sand that you just can’t put down!
-                    </p>
-                </div>
-                <div class="solid-green activities-style">
-                    <p>
-                        <em>Activity Four: Shadow Puppets</em>
-                        <br>
-                        Create spectacular Shadow Puppets and let the little ones explore light and shade. Perfect for
-                        storytelling!
-                    </p>
-                </div>
-                <div class="solid-peach activities-style">
-                    <p>
-                        <em>Activity Five: Water Play</em>
-                        <br>
-                        Pouring, scooping, splashing and bubbles! Water Play is an exciting sensory play activity, where
-                        children become absorbed with the ripples of the water – try out a variety of water play games!
-                    </p>
-                </div>
-                <div class="solid-blue activities-style">
-                    <p>
-                        <em>Activity Six: Porridge Oats Construction</em>
-                        <br>
-                        Empty a box of porridge oats, or other cereals, into a Tuff Tray. Then add Toy Diggers & Trucks
-                        for
-                        scooping, driving, digging and burying! Create wonderful porridge oats constructions – your kids
-                        will
-                        have a blast.
-                    </p>
-                </div>
-                <div class="solid-pink activities-style">
-                    <p>
-                        <em>Activity Seven: Couscous Dinosaur Hunt</em>
-                        <br>
-                        Fill a large Tub with couscous and bury toy Dinosaurs inside it. Then ‘hunt’ for your dinosaurs
-                        using
-                        brushes in an exciting Fossil Hunt.
-                    </p>
-                </div>
-                <div class="solid-grey activities-style">
-                    <p>
-                        <em>Activity Eight: Make Pretend Snow</em>
-                        <br>
-                        Feel the snow crunch between your fingers! Fake Snow is really easy to make with flour and oil –
-                        simply
-                        mix together 8 cups of cornflour and 1 cup of vegetable oil.
-                    </p>
-                </div>
-                <div class="solid-green activities-style">
-                    <p>
-                        <em>Activity Nine: Homemade Paint Bags</em>
-                        <br>
-                        Fill zip lock bags with various coloured Paints and let the children enjoy squishing them and
-                        mixing
-                        the
-                        colours – without the mess!
-                    </p>
-                </div>
-                <div class="solid-peach activities-style">
-                    <p>
-                        <em>Activity Ten: Mud Pies</em>
-                        <br>
-                        Rustle up some fabulous sludgy treats and enjoy the sensory experience (and mess) of sticky,
-                        gloopy
-                        and
-                        hard mud!
-                    </p>
+                <div id=activities-boxes>
+                    <div class="solid-blue activities-style">
+
+                        <h6>Activity One: Making and Painting Homemade Salt Dough</h6>
+                        <p>
+                            Simply combine salt, flour and water to create beautiful Salt Dough sculptures. Then get
+                            those
+                            Cutters
+                            and Rollers out to perfect your shapes – and add Glitter for an extra sparkle! Finally, pop
+                            your
+                            creations in the oven and once they are hardened, let the little ones paint them.
+                        </p>
+                    </div>
+                    <div class="solid-pink activities-style">
+
+                        <h6>Activity Two: Play Dough</h6>
+                        <p>
+                            Cutting, squishing, rolling, and kneading. Soft Dough is perfect for stimulating sense of
+                            touch
+                            –
+                            toddlers will enjoy hours of soft dough fun!
+                        </p>
+                    </div>
+                    <div class="solid-grey activities-style">
+
+                        <h6>Activity Three: Kinetic Sand</h6>
+                        <p>
+                            Mould, squeeze and build. Kinetic Sand flows through the fingers just like real sand – it’s
+                            that
+                            squeezable sand that you just can’t put down!
+                        </p>
+                    </div>
+                    <div class="solid-green activities-style">
+
+                        <h6>Activity Four: Shadow Puppets</h6>
+                        <p>
+                            Create spectacular Shadow Puppets and let the little ones explore light and shade. Perfect
+                            for
+                            storytelling!
+                        </p>
+                    </div>
+                    <div class="solid-peach activities-style">
+
+                        <h6>Activity Five: Water Play</h6>
+                        <p>
+                            Pouring, scooping, splashing and bubbles! Water Play is an exciting sensory play activity,
+                            where
+                            children become absorbed with the ripples of the water – try out a variety of water play
+                            games!
+                        </p>
+                    </div>
+                    <div class="solid-blue activities-style">
+
+                        <h6>Activity Six: Porridge Oats Construction</h6>
+                        <p>
+                            Empty a box of porridge oats, or other cereals, into a Tuff Tray. Then add Toy Diggers &
+                            Trucks
+                            for
+                            scooping, driving, digging and burying! Create wonderful porridge oats constructions – your
+                            kids
+                            will
+                            have a blast.
+                        </p>
+                    </div>
+                    <div class="solid-pink activities-style">
+
+                        <h6>Activity Seven: Couscous Dinosaur Hunt</h6>
+                        <p>
+                            Fill a large Tub with couscous and bury toy Dinosaurs inside it. Then ‘hunt’ for your
+                            dinosaurs
+                            using
+                            brushes in an exciting Fossil Hunt.
+                        </p>
+                    </div>
+                    <div class="solid-grey activities-style">
+
+                        <h6>Activity Eight: Make Pretend Snow</h6>
+                        <p>
+                            Feel the snow crunch between your fingers! Fake Snow is really easy to make with flour and
+                            oil –
+                            simply
+                            mix together 8 cups of cornflour and 1 cup of vegetable oil.
+                        </p>
+                    </div>
+                    <div class="solid-green activities-style">
+                        <h6>Activity Nine: Homemade Paint Bags</h6>
+                        <p>
+                            Fill zip lock bags with various coloured Paints and let the children enjoy squishing them
+                            and
+                            mixing
+                            the
+                            colours – without the mess!
+                        </p>
+                    </div>
+                    <div class="solid-peach activities-style">
+                        <h6>Activity Ten: Mud Pies</h6>
+                        <p>
+                            Rustle up some fabulous sludgy treats and enjoy the sensory experience (and mess) of sticky,
+                            gloopy
+                            and
+                            hard mud!
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
