--- a/feedback.html
+++ b/feedback.html
@@ -43,6 +43,7 @@
             </ul>
         </nav>
     </header>
+<!--The div content section is added to allow for enough content padding when styling for the sticky header bar-->
     <div class="content">
     <section>
         <!--Feedback Section-->
@@ -137,8 +138,9 @@
                 </p>
             </div>
         </div>
-    </section>
     </div>
+</section>
+</div>
     <footer>
         <div id="footer-logo">
             <a href="index.html"><i class="fas fa-hand-holding-heart"></i>
@@ -156,6 +158,24 @@
     </footer>
     <!-- Font awesome script-->
     <script src="https://kit.fontawesome.com/bd9c348b33.js" crossorigin="anonymous"></script>
+        <!--Javascript from W3 schools tutorial for sticky nav bar
+    https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_navbar_sticky-->
+    <script>
+        window.onscroll = function () {
+            myFunction()
+        }
+
+        var header = document.getElementById("header");
+        var sticky = header.offsetTop;
+
+        function myFunction() {
+            if (window.pageYOffset >= sticky) {
+                header.classList.add("sticky")
+            } else {
+                header.classList.remove("sticky");
+            }
+        }
+    </script>
 </body>
 
 </html>
