Remove @media queries to review

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     <!--Page Title-->
     <title>Play Eternal</title>
 </head>
+
 <body>
-     <!--Header-->
+    <!--Header-->
     <header id="header">
         <h1 id="logo"><a href="index.html">Play Eternal <i class="fas fa-hand-holding-heart" aria-hidden="true"></i></a>
         </h1>
@@ -47,28 +48,26 @@
     <div class="content">
         <section>
             <!--Hero Image-->
-            <div id="hero-area">
+            <div id="home-page">
+                <div id="hero-area">
+                </div>
                 <div id="hero-text">
                     <h2 class="text-area">Help your child through play</h2>
-                    <br>
                     <p class="text-area"> So many children are overwhelmed by the amount
                         and variation of sensory stimuli in our everyday
                         environments.</p>
-                    <br>
                     <p class="text-area">
                         By introducing some simple play time with your child
                         you can help them meet their developmental goals
                         as well as cope with any negative emotions they may
                         be experiencing. Most of all they will have fun!</p>
-                    <br>
                     <h3 class="text-area">What can I do as a parent?</h3>
                     <button id="learn-more" onclick="location.href='about.html'">Learn More</button>
                 </div>
             </div>
-            
         </section>
-        </div>
-        <!--Footer-->
+    </div>
+    <!--Footer-->
     <footer>
         <div id="footer-logo">
             <a href="index.html"><i class="fas fa-hand-holding-heart"></i>
@@ -88,7 +87,7 @@
 
     <!-- Font awesome script-->
     <script src="https://kit.fontawesome.com/bd9c348b33.js" crossorigin="anonymous"></script>
-        <!--Javascript from W3 schools tutorial for sticky nav bar
+    <!--Javascript from W3 schools tutorial for sticky nav bar
     https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_navbar_sticky-->
     <script>
         window.onscroll = function () {
@@ -107,4 +106,5 @@
         }
     </script>
 </body>
+
 </html>
