Add style changes to improve readability and visuals

--- a/contact.html
+++ b/contact.html
@@ -62,6 +62,7 @@
                             <label for="ages-kids" class="form-labels">Child/Children's Age/s </label><input
                                 type="text" id="ages-kids" name="ages-of-children" required class="form-input">
                             <label for="feedback-choice-one" class="form-labels">Feedback </label>
+                            <div id="radio-feedback-area">
                             <input type="radio" id="feedback-choice-one" name="feedback-choice"
                                 value="The site met all of my needs" class="radio-feedback" required><label
                                 for="feedback-choice-one" class="radio-feedback">The site
@@ -73,7 +74,7 @@
                             <input type="radio" id="feedback-choice-three" name="feedback-choice"
                                 value="The site met very few of my needs" class="radio-feedback"><label
                                 for="feedback-choice-three" class="radio-feedback">The site
-                                met very few of my needs</label>
+                                met very few of my needs</label></div>
                             <label for="feedback-page" class="form-labels">Feedback on our website </label><textarea
                                 id="feedback-page" name="feedback-on-website" class="text-area-pane"
                                 >Please provide us with any feedback on our site...</textarea>
