--- a/feedback.html
+++ b/feedback.html
@@ -50,139 +50,160 @@
             <div id="feedback-heading">
                 <h2>Hear From Each Other</h2>
             </div>
-            <h3 class="solid-peach feed-sub">Feedback</h3>
-            <div class="solid-peach feedback-section senses-info-left">
-                <div class="feedback-grid">
-                    <div class="feedback-image">
-                        <img src="assets/images/dad_1.jpg" alt="a dad's profile picture" class="profile-pictures"></div>
-                    <div>
-                        <h6 class="feedback-heading">Simon Jefferies, Child age 6</h6>
-                        <p class="feedback-font">"My son has been struggling with anxiety. Since we introduced the
-                            recommended activities at
-                            home
-                            it has made the world of difference. He is calmer, more secure and very happy. Bonus is that
-                            we have
-                            had a lot of fun."
-                        </p>
+            <div id="feedback-container">
+                <h3 class="solid-peach feed-sub">Feedback</h3>
+                <div class="solid-peach feedback-section senses-info-left">
+                    <div class="feedback-grid">
+                        <div class="feedback-image">
+                            <img src="assets/images/dad_1.jpg" alt="a dad's profile picture" class="profile-pictures">
+                        </div>
+                        <div>
+                            <h6 class="feedback-heading">Simon Jefferies, Child age 6</h6>
+                            <p class="feedback-font">"My son has been struggling with anxiety. Since we introduced the
+                                recommended activities at
+                                home
+                                it has made the world of difference. He is calmer, more secure and very happy. Bonus is
+                                that
+                                we have
+                                had a lot of fun."
+                            </p>
+                        </div>
                     </div>
-                </div>
-                <div class="feedback-grid">
-                    <div class="feedback-image">
-                        <img src="assets/images/teacher_1.jpg" alt="a profile picture of a woman"
-                            class="profile-pictures"></div>
-                    <div>
-                        <h6 class="feedback-heading">Fiona Williams, Nursery Teacher</h6>
-                        <p class="feedback-font">"This site has truly helped me to arrange fun daily activities that
-                            really benefit the
-                            development of
-                            the children.
-                            I often refer parents to the site to introduce Sensory Play at home as it is easy to use and
-                            includes
-                            affordable activities. I have received positive feedback."
-                        </p>
+                    <div class="feedback-grid">
+                        <div class="feedback-image">
+                            <img src="assets/images/teacher_1.jpg" alt="a profile picture of a woman"
+                                class="profile-pictures"></div>
+                        <div>
+                            <h6 class="feedback-heading">Fiona Williams, Nursery Teacher</h6>
+                            <p class="feedback-font">"This site has truly helped me to arrange fun daily activities that
+                                really benefit the
+                                development of
+                                the children.
+                                I often refer parents to the site to introduce Sensory Play at home as it is easy to use
+                                and
+                                includes
+                                affordable activities. I have received positive feedback."
+                            </p>
+                        </div>
                     </div>
-                </div>
-                <div class="feedback-grid">
-                    <div class="feedback-image">
-                        <img src="assets/images/mum_3.jpg" alt="a mum's profile picture" class="profile-pictures"></div>
-                    <div>
-                        <h6 class="feedback-heading">Debbie Angus, Children 1, 5 and 7</h6>
-                        <p class="feedback-font">"As I am a busy mum of three, I don't have extra time on my hands. This
-                            site is
-                            straightforward
-                            and
-                            really
-                            easy to use. There is just the right amount of information. All three of my children enjoyed
-                            the
-                            activities
-                            and I am so glad it helped us to spend quality time together."
-                        </p>
+                    <div class="feedback-grid">
+                        <div class="feedback-image">
+                            <img src="assets/images/mum_3.jpg" alt="a mum's profile picture" class="profile-pictures">
+                        </div>
+                        <div>
+                            <h6 class="feedback-heading">Debbie Angus, Children 1, 5 and 7</h6>
+                            <p class="feedback-font">"As I am a busy mum of three, I don't have extra time on my hands.
+                                This
+                                site is
+                                straightforward
+                                and
+                                really
+                                easy to use. There is just the right amount of information. All three of my children
+                                enjoyed
+                                the
+                                activities
+                                and I am so glad it helped us to spend quality time together."
+                            </p>
+                        </div>
                     </div>
-                </div>
-                <div class="feedback-grid">
-                    <div class="feedback-image">
-                        <img src="assets/images/mum_1.jpg" alt="a mum's profile picture" class="profile-pictures"></div>
-                    <div>
-                        <h6 class="feedback-heading">Jeanie Marks, Children 2 and 4</h6>
-                        <p class="feedback-font">"Wow! What a fantastic experience it has been using this site. It has
-                            made such a difference
-                            in the lives of my children. They thoroughly enjoy the activities and I can see an
-                            improvement
-                            in their development and their wellbeing."
-                        </p>
+                    <div class="feedback-grid">
+                        <div class="feedback-image">
+                            <img src="assets/images/mum_1.jpg" alt="a mum's profile picture" class="profile-pictures">
+                        </div>
+                        <div>
+                            <h6 class="feedback-heading">Jeanie Marks, Children 2 and 4</h6>
+                            <p class="feedback-font">"Wow! What a fantastic experience it has been using this site. It
+                                has
+                                made such a difference
+                                in the lives of my children. They thoroughly enjoy the activities and I can see an
+                                improvement
+                                in their development and their wellbeing."
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
         <section>
             <!--Recommendations Section-->
-            <h3 class="solid-pink feed-sub">Recommendations</h3>
-            <div class="solid-pink feedback-section senses-info-left">
-                <div class="feedback-grid">
-                    <div class="feedback-image">
-                        <img src="assets/images/mum_4.jpg" alt="a mum's profile picture" class="profile-pictures"></div>
-                    <div>
-                        <h6 class="feedback-heading">Angela Jacobs, Children ages 1 and 3</h6>
-                        <p class="feedback-font">"I love spending time exploring with my children. I recommend a
-                            textures game that we
-                            regularly
-                            play.
-                            I make a bowl of jelly, a bowl of rice and a bowl of spaghetti. I will hide a few small toys
-                            inside
-                            each bowl.
-                            The kids love getting in there, exploring the different food textures and finding little
-                            treasures."
-                        </p>
+            <div id="recommendations-container">
+                <h3 class="solid-pink feed-sub">Recommendations</h3>
+                <div class="solid-pink feedback-section senses-info-left">
+                    <div class="feedback-grid">
+                        <div class="feedback-image">
+                            <img src="assets/images/mum_4.jpg" alt="a mum's profile picture" class="profile-pictures">
+                        </div>
+                        <div>
+                            <h6 class="feedback-heading">Angela Jacobs, Children ages 1 and 3</h6>
+                            <p class="feedback-font">"I love spending time exploring with my children. I recommend a
+                                textures game that we
+                                regularly
+                                play.
+                                I make a bowl of jelly, a bowl of rice and a bowl of spaghetti. I will hide a few small
+                                toys
+                                inside
+                                each bowl.
+                                The kids love getting in there, exploring the different food textures and finding little
+                                treasures."
+                            </p>
+                        </div>
                     </div>
-                </div>
-                <div class="feedback-grid">
-                    <div class="feedback-image">
-                        <img src="assets/images/mum_2.jpg" alt="a mum's profile picture" class="profile-pictures"></div>
-                    <div>
-                        <h6 class="feedback-heading">Jessica Sutcliffe, Child age 8</h6>
-                        <p class="feedback-font">"My daughter is a sensitive little girl and can really struggle with
-                            sensory overload. We have
-                            made
-                            some sensory
-                            boards for her bedroom which help her process and explore. I highly recommend this!"
-                        </p>
+                    <div class="feedback-grid">
+                        <div class="feedback-image">
+                            <img src="assets/images/mum_2.jpg" alt="a mum's profile picture" class="profile-pictures">
+                        </div>
+                        <div>
+                            <h6 class="feedback-heading">Jessica Sutcliffe, Child age 8</h6>
+                            <p class="feedback-font">"My daughter is a sensitive little girl and can really struggle
+                                with
+                                sensory overload. We have
+                                made
+                                some sensory
+                                boards for her bedroom which help her process and explore. I highly recommend this!"
+                            </p>
+                        </div>
                     </div>
-                </div>
-                <div class="feedback-grid">
-                    <div class="feedback-image">
-                        <img src="assets/images/teacher_2.jpg" alt="a woman's profile picture" class="profile-pictures">
+                    <div class="feedback-grid">
+                        <div class="feedback-image">
+                            <img src="assets/images/teacher_2.jpg" alt="a woman's profile picture"
+                                class="profile-pictures">
+                        </div>
+                        <div>
+                            <h6 class="feedback-heading">Anna Reeves, Occupational Therapist</h6>
+                            <p class="feedback-font">"As an Occupational Therapist I understand the benefit of sensory
+                                play.
+                                One of the activities I
+                                always
+                                recommend to parents to do at home is the shaving foam activity. Simply, smear shaving
+                                foam
+                                on
+                                the
+                                inside of
+                                the shower door. Allow your child to draw pictures, shapes or simply smear the foam
+                                around!"
+                            </p>
+                        </div>
                     </div>
-                    <div>
-                        <h6 class="feedback-heading">Anna Reeves, Occupational Therapist</h6>
-                        <p class="feedback-font">"As an Occupational Therapist I understand the benefit of sensory play.
-                            One of the activities I
-                            always
-                            recommend to parents to do at home is the shaving foam activity. Simply, smear shaving foam
-                            on
-                            the
-                            inside of
-                            the shower door. Allow your child to draw pictures, shapes or simply smear the foam around!"
-                        </p>
-                    </div>
-                </div>
-                <div class="feedback-grid">
-                    <div class="feedback-image">
-                        <img src="assets/images/dad_2.jpg" alt="a dad's profile picture" class="profile-pictures"></div>
-                    <div>
-                        <h6 class="feedback-heading">Andrew Edwards, Children 3 and 7</h6>
-                        <p class="feedback-font">"I have learnt so much since I started using this site. I have also
-                            come up with some creative
-                            sensory ideas
-                            myself. The best thing is, you don't even need to make anything. When we go out to the
-                            seaside,
-                            we
-                            have a nature
-                            hunt, looking for shells, rocks, seaweed, anything we can find and compare the feel, the
-                            smell,
-                            the
-                            sounds and how
-                            the items are the same or different. We really enjoy playing together."
-                        </p>
+                    <div class="feedback-grid">
+                        <div class="feedback-image">
+                            <img src="assets/images/dad_2.jpg" alt="a dad's profile picture" class="profile-pictures">
+                        </div>
+                        <div>
+                            <h6 class="feedback-heading">Andrew Edwards, Children 3 and 7</h6>
+                            <p class="feedback-font">"I have learnt so much since I started using this site. I have also
+                                come up with some creative
+                                sensory ideas
+                                myself. The best thing is, you don't even need to make anything. When we go out to the
+                                seaside,
+                                we
+                                have a nature
+                                hunt, looking for shells, rocks, seaweed, anything we can find and compare the feel, the
+                                smell,
+                                the
+                                sounds and how
+                                the items are the same or different. We really enjoy playing together."
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
