Add media query for screen max width 2000px

--- a/feedback.html
+++ b/feedback.html
@@ -58,7 +58,7 @@
                             <img src="assets/images/dad_1.jpg" alt="a dad's profile picture" class="profile-pictures">
                         </div>
                         <div>
-                            <h6 class="feedback-heading">Simon Jefferies, Child age 6</h6>
+                            <h6 class="feedback-heading">Simon Jeffery, Child age 6</h6>
                             <p class="feedback-font">"My son has been struggling with anxiety. Since we introduced the
                                 recommended activities at
                                 home
@@ -117,7 +117,7 @@
                                 made such a difference
                                 in the lives of my children. They thoroughly enjoy the activities and I can see an
                                 improvement
-                                in their development and their wellbeing."
+                                in their development and their well-being."
                             </p>
                         </div>
                     </div>
@@ -153,7 +153,7 @@
                             <img src="assets/images/mum_2.jpg" alt="a mum's profile picture" class="profile-pictures">
                         </div>
                         <div>
-                            <h6 class="feedback-heading">Jessica Sutcliffe, Child age 8</h6>
+                            <h6 class="feedback-heading">Jessica Suitcliffe, Child age 8</h6>
                             <p class="feedback-font">"My daughter is a sensitive little girl and can really struggle
                                 with
                                 sensory overload. We have
@@ -201,7 +201,7 @@
                                 smell,
                                 the
                                 sounds and how
-                                the items are the same or different. We really enjoy playing together."
+                                the items are the same or different."
                             </p>
                         </div>
                     </div>
